--- a/bhz-website.css
+++ b/bhz-website.css
@@ -8,3 +8,11 @@ h {
 p {
   color: red;
 }
+.banner{
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75), url(bg.jpg));
+  background-size: cover;
+  background-position: center;
+  
+}
