--- a/bhz-website.css
+++ b/bhz-website.css
@@ -4,17 +4,10 @@
   font-family: sans-serif;
 }
 
-h {
-  color: blue;
-  text-align: center;
-}
-p {
-  color: red;
-}
 .banner{
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75), url(bg.jpg));
+  background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url(bg.jpg);
   background-size: cover;
   background-position: center;
   
