--- a/bhz-website.css
+++ b/bhz-website.css
@@ -20,3 +20,9 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.navbar ul li{
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
+}
