--- a/bhz-website.css
+++ b/bhz-website.css
@@ -37,18 +37,12 @@
 .navbar ul li::after{
   content: empty;
   height: 3px;
-  width: 0;
-  background: #42adf5;
+  width: 100;
+  background: #ffffff;
   position: absolute;
   left: 0;
   bottom: -10px;
-  transition: 0.5s;
 }
-
-.navbar ul li:hover::after{
-  width: 100%;
-}
-  
   
   
 
