--- a/bhz-website.css
+++ b/bhz-website.css
@@ -37,7 +37,7 @@
 .navbar ul li::after{
   content: '';
   height: 3px;
-  width: 100;
+  width: 100%;
   background: #ffffff;
   position: absolute;
   left: 0;
